# rewards-center

./: Anchor.toml  Makefile  README.md  generate-erd.js  generate-idls.sh  generate-sdk.js  index.html  jest.config.js  modules.html  package.json
assets/: search.js
enums/: Action.html  (+2 more)
programs/cardinal-receipt-manager/: Cargo.toml
programs/cardinal-receipt-manager/src/: errors.rs  lib.rs
programs/cardinal-receipt-manager/src/instructions/: claim_reward_receipt.rs  close_receipt_entry.rs  close_receipt_manager.rs  close_reward_receipt.rs  init_receipt_entry.rs  init_receipt_manager.rs  init_reward_receipt.rs  mod.rs  set_reward_receipt_allowed.rs  update_receipt_manager.rs
programs/cardinal-reward-distributor/: Cargo.toml
programs/cardinal-reward-distributor/src/: errors.rs  lib.rs
programs/cardinal-reward-distributor/src/instructions/: claim_rewards.rs  close_reward_distributor.rs  close_reward_entry.rs  init_reward_distributor.rs  init_reward_entry.rs  mod.rs  reclaim_funds.rs  update_reward_distributor.rs  update_reward_entry.rs
programs/cardinal-rewards-center/: Cargo.toml
programs/cardinal-rewards-center/src/: errors.rs  lib.rs  utils.rs
programs/cardinal-rewards-center/src/auction/: bid.rs  bid_auction.rs  execute_auction.rs  init_auction.rs  mod.rs  state.rs  update_auction.rs
programs/cardinal-rewards-center/src/authorization/: authorize_mint.rs  state.rs
programs/cardinal-rewards-center/src/instructions/authorization/: authorize_mint.rs
programs/cardinal-rewards-center/src/instructions/stake_booster/: boost_stake_entry.rs  close_stake_booster.rs  state.rs
programs/cardinal-rewards-center/src/instructions/stake_entry/: init_entry.rs
programs/cardinal-rewards-center/src/instructions/stake_pool/: mod.rs
programs/cardinal-rewards-center/src/payment/: init_payment_info.rs  mod.rs  payments.rs  state.rs  update_payment_info.rs
programs/cardinal-rewards-center/src/raffle/: enter_raffle.rs  execute_raffle.rs  init_raffle.rs  mod.rs  state.rs  update_raffle.rs
programs/cardinal-rewards-center/src/reward_distribution/: mod.rs  state.rs
programs/cardinal-rewards-center/src/reward_distribution/reward_distributor/: close_reward_distributor.rs  init_reward_distributor.rs  reclaim_funds.rs  update_reward_distributor.rs
programs/cardinal-rewards-center/src/reward_distribution/reward_entry/: claim_rewards.rs
programs/cardinal-rewards-center/src/reward_receipts/: state.rs
programs/cardinal-rewards-center/src/reward_receipts/receipt_entry/: close_receipt_entry.rs  init_receipt_entry.rs
programs/cardinal-rewards-center/src/reward_receipts/receipt_manager/: init_receipt_manager.rs  update_receipt_manager.rs
programs/cardinal-rewards-center/src/reward_receipts/reward_receipt/: claim_reward_receipt.rs  init_reward_receipt.rs
programs/cardinal-rewards-center/src/stake_booster/: boost_stake_entry.rs  init_stake_booster.rs  state.rs  update_stake_booster.rs
programs/cardinal-rewards-center/src/stake_entry/: force_unstake.rs  init_entry.rs  mod.rs  reassign_stake_entry.rs  reset_stake_entry.rs  resize_stake_entry.rs  set_stake_entry_multiplier_stake_seconds.rs  state.rs  update_total_stake_seconds.rs
programs/cardinal-rewards-center/src/stake_entry/ccs/: stake_ccs.rs  unstake_ccs.rs
programs/cardinal-rewards-center/src/stake_entry/editions/: stake_edition.rs  unstake_edition.rs
programs/cardinal-rewards-center/src/stake_entry/multiplier_stake_seconds/: decrement_stake_entry_multiplier_stake_seconds.rs  increment_stake_entry_multiplier_stake_seconds.rs
programs/cardinal-rewards-center/src/stake_entry/pnfts/: stake_pnft.rs  unstake_pnft.rs
programs/cardinal-rewards-center/src/stake_pool/: init_pool.rs  state.rs  update_pool.rs
programs/cardinal-stake-pool/: Cargo.toml
programs/cardinal-stake-pool/src/: errors.rs  lib.rs  state.rs
programs/cardinal-stake-pool/src/instructions/: claim_receipt_mint.rs  close_stake_pool.rs  init_entry.rs  init_pool.rs  init_stake_mint.rs  mod.rs  return_receipt_mint.rs  stake.rs  stake_pool_fill_zeros.rs  unstake.rs  update_pool.rs  update_total_stake_seconds.rs
programs/cardinal-stake-pool/src/instructions/authorization/: authorize_mint.rs  deauthorize_mint.rs  mod.rs  state.rs
programs/cardinal-stake-pool/src/instructions/editions/: stake_edition.rs  unstake_edition.rs
programs/cardinal-stake-pool/src/instructions/reward_distribution/: state.rs
programs/cardinal-stake-pool/src/instructions/reward_receipts/: mod.rs  state.rs
programs/cardinal-stake-pool/src/instructions/stake_booster/: boost_stake_entry.rs  close_stake_booster.rs  init_stake_booster.rs  mod.rs  update_stake_booster.rs
programs/cardinal-stake-pool/src/instructions/stake_entry/: close_stake_entry.rs  init_entry.rs  mod.rs  reassign_stake_entry.rs  update_total_stake_seconds.rs
programs/cardinal-stake-pool/src/instructions/stake_pool/: close_stake_pool.rs  init_identifier.rs  init_pool.rs  mod.rs  update_pool.rs
(+1796 files in other folders)
