[package]
name = "cardinal-receipt-manager"
version = "1.10.7"
description = "Cardinal reward receipt manager"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-staking/tree/main/programs/cardinal-receipt-manager"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal", "reward", "receipt", "manager"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_receipt_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
solana-program = "1.8.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
cardinal-stake-pool = { version = "^1.10.7", path = "../cardinal-stake-pool", features = ["cpi"] }
cardinal-payment-manager = { version = "^1.7.9", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }
