[package]
name = "cardinal-reward-distributor"
version = "1.10.7"
description = "Cardinal reward distributor"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-staking/tree/main/programs/cardinal-reward-distributor"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal", "stake", "pool"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_reward_distributor"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
solana-program = "1.8.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
cardinal-stake-pool = { version = "^1.10.7", path = "../cardinal-stake-pool", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }
