[package]
name = "cardinal-rewards-center"
version = "2.1.0"
description = "Cardinal rewards center"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-rewards-center"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_rewards_center"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"
solana-program = "1.10.41"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "=1.3.3", features = ["no-entrypoint"] }

[dev-dependencies]
proptest = { version = "1.0" }
