[package]
name = "cardinal-rewards-center"
version = "3.0.0"
description = "Cardinal rewards center"
edition = "2021"
homepage = "https://cardinal.so"
repository = "https://github.com/cardinal-labs/cardinal-rewards-center"
authors = ["Giannis Chatziveroglou <giannis@cardinal.so>"]
license = "AGPL-3.0"
keywords = ["solana", "cardinal"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cardinal_rewards_center"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
solana-program = "1.10.41"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.9.1", features = ["no-entrypoint"] }
mpl-token-auth-rules = "1.1.0"
cardinal-creator-standard = { version = "^2.2.0", features = ["cpi"] }

[dev-dependencies]
proptest = { version = "1.0" }
